@@ -23,6 +23,7 @@ use Getopt::Long qw(GetOptions);
 use Pod::Usage;
 
 my $help = 0;
+my $force = 0;
 my $verbose = 0;
 my $separator = '_';
 my $target = ' ';
@@ -30,6 +31,7 @@ my $target = ' ';
 GetOptions('separator=s' => \$separator,
            'target=s' => \$target,
            'verbose' => \$verbose,
+           'force' => \$force,
            'help' => \$help) or pod2usage(2);
 
 pod2usage(1) if $help;
@@ -40,6 +42,10 @@ foreach my $source (@ARGV) {
   my ($volume, $directory, $filename) = File::Spec->splitpath($source);
   if($filename =~ s/$target/$separator/g) {
     my $dest = File::Spec->catpath($volume, $directory, $filename);
+    if (-e $dest && ! $force) {
+      print "Could not move $source. $dest already exists. Use --force to overwrite.\n";
+      exit 3;
+    }
     move($source, $dest);
     print "$source was moved to $dest\n";
   }
@@ -67,6 +73,10 @@ Use -h for detailed help.
 =item B<-v, --verbose>
 
 Print information on each file rmspaces tried to apply substitutions on. This may be useful if you are using wildcards.
+
+=item B<-f, --force>
+
+Force file overwrite if destiny file already exists.
 
 =item B<-s, --separator>
 
