@@ -2,6 +2,8 @@ Revision history for Perl module App::rmspaces
 
 Unreleased
   * Fix bug when operating on paths with target character.
+  * Do not overwrite files by default.
+  * New --force option to allow overwriting files.
 
 0.4 2017-07-19
   * Fix license fields for metadata.
